Login & Sign up

--- a/masterpc/templates/user/index.html
+++ b/masterpc/templates/user/index.html
@@ -5,7 +5,76 @@
 
 {% block container %}
 <div class="container">
-    <h1>Hello, Welcome to MasterPC</h1>
+  {% if not request.user.is_authenticated %}
+    <h1 class="text-light">Hello, Welcome to MasterPC</h1>
+    
+  {% else %}
+      <div class="col-sm-12 col-lg-6">
+      
+        <h4 class="text-light my-3"> Mis PCs
+          <button type="button" class="btn btn-outline-warning btn-sm float-right rounded-pill px-3" data-toggle="collapse"
+            data-target="#add_pc" aria-expanded="false" aria-controls="add_pc">
+            <i class="fas fa-plus"></i> Agregar
+          </button>
+        </h4>
+      
+        <div class="collapse" id="add_pc">
+          <div class="card card-body bg-light">
+            <form method="POST" action="">
+              <div class="form-group">
+                <label for="name">Nombre del PC</label>
+                <input type="text" class="form-control" name="name" required minlength="4"
+                  maxlength="50" placeholder="Ingresa un nombre para este equipo" />
+              </div>
+              <div class="form-group">
+                <label for="budget">Presupuesto <span class="text-muted">(Opcional)</span></label>
+                <input type="number" class="form-control" name="budget" min="600000" max="20000000"
+                  #budget="ngModel" placeholder="Valor en Pesos Colombianos" />
+              </div>
+      
+              <div class="form-group text-center mb-1">
+                <button class="btn btn-warning px-5 rounded-pill">Guardar</button>
+              </div>
+      
+              <div class="alert alert-warning" *ngIf="pcform.submitted && falloGuardar">
+                Signup failed!<br />{{ errorMessage }}
+              </div>
+            </form>
+          </div>
+        </div>
+      
+        <div class="card bg-warning my-3 shadow" *ngFor="let pc of pcs; let i = index">
+          <div class="card-body py-2">
+            <h5><a href="" class="text-dark">{{pc.name}}</a>
+              <button class="btn btn-warning btn-sm rounded-circle float-right" type="button" data-toggle="collapse"
+                [attr.data-target]="'#collapse_'+i" aria-expanded="false" [attr.aria-controls]="'collapse_'+i">
+                <i class="fas fa-angle-down fa-lg"></i>
+              </button>
+            </h5>
+            <div class="collapse" [attr.id]="'collapse_'+i">
+              <p class="text-truncate mb-0 small">
+                CPU: Amd Ryzen 5 3600 <br>
+                GPU: Gigabyte RX 5500 XT 8G OC <br>
+                Board: Gigabyte Aorus B450M <br>
+                RAM: Corsair Vengeance RGB Pro 8GB 3000Mhz (x2) <br>
+                Disk: Crusial 512GB (Ssd M.2) <br>
+                Seagate Barracuda 2TB (HHD) <br>
+                PSU: Thermaltake 600W Bronce <br>
+              </p>
+            </div>
+      
+          </div>
+          <div class="card-footer py-1 text-center">
+            <span class="m-2">Presupuesto:
+              <span *ngIf="pc.budget">$ {{pc.budget}}</span>
+              <span *ngIf="!pc.budget"> - </span>
+            </span>
+            <span class="m-2 font-weight-bold ">Costo: $ 2.000.000</span>
+          </div>
+        </div>
+      </div>
+        
+  {% endif %}
 </div>
 
 {% endblock %}
