--- a/masterpc/templates/base/base.html
+++ b/masterpc/templates/base/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="{% static 'js/fontawesome.js' %}"></script>
 </head>
-<body>
+<body class="bg-dark-1">
     {% block navbar %}
         {% include 'base/navbar.html' %}
     {% endblock %}
