--- a/masterpc/templates/base/navbar.html
+++ b/masterpc/templates/base/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand navbar-light bg-light-1">
     <div class="container">
-        <a href="{% url 'index' %}" class="navbar-brand">MasterPC</a>
+        <a href="{% url 'index' %}" class="navbar-brand lobster">MasterPC</a>
         <ul class="navbar-nav mr-auto">
             <!-- <li class="nav-item">
                 <a href="" class="nav-link">Home </a>
