--- a/masterpc/templates/registration/login.html
+++ b/masterpc/templates/registration/login.html
@@ -3,8 +3,8 @@
 {% block title %}Log In{% endblock %}
 
 {% block container %}
-<br><br><br>
-<div class="container">
+
+<div class="container py-5">
     <div class="row">
         <div class="col-sm-12 offset-md-4 col-md-4">
             <div class="card bg-light mb-3">
@@ -42,7 +42,7 @@
             {% endif %}
             
             <div class="text-light text-center">
-                Do you already have an account?
+                Do you have an account?
                 <a href="{% url 'signup' %}" class="mx-1 text-warning"><b>Sign Up</b></a>
             </div>
 
