--- a/masterpc/templates/registration/signup.html
+++ b/masterpc/templates/registration/signup.html
@@ -4,18 +4,18 @@
 
 {% block container %}
 
-<div class="container py-3">
+<div class="container py-4">
     <div class="row">
-        <div class="col-md">
-            {% if form.errors %}
+        {% if form.errors %}
+            <div class="col-md">
                 <div class="alert alert-danger alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <strong>Error: </strong> {{ form.errors }}
                 </div>
+            </div>        
             {% endif %}
-        </div>        
 
         <div class="col-md">
             <!-- <div class="col-sm-12 offset-md-3 col-md-6"> -->
@@ -27,28 +27,32 @@
                    
                     <form method="post">
                         {% csrf_token %}
-                        <div class="form-group">
-                          {{ form.username.label }}
-                          {{ form.username }}
-                          <small id="helpId" class="text-muted">{{form.username.help_text}}</small>
-                        </div>
-                        <div class="form-group">
-                            {{ form.email.label }}
-                            {{ form.email }}
-                            <small id="helpId" class="text-muted">{{form.email.help_text}}</small>
-                        </div>
-                        <div class="form-group">
-                            {{ form.password1.label }}
-                            {{ form.password1 }}
-                            <small id="helpId" class="text-muted">{{form.password1.help_text}}</small>
-                        </div>
-                        <div class="form-group">
-                            {{ form.password2.label }}
-                            {{ form.password2 }}
-                            <small id="helpId" class="text-muted">{{form.password2.help_text}}</small>
+                        <div class="form-row">
+                            <div class="form-group col-md">
+                              {{ form.username.label }}
+                              {{ form.username }}
+                              <small id="helpId" class="text-muted">{{form.username.help_text}}</small>
+                            </div>
+                            <div class="form-group col-md">
+                                {{ form.email.label }}
+                                {{ form.email }}
+                                <small id="helpId" class="text-muted">{{form.email.help_text}}</small>
+                            </div>
+                            <div class="w-100"></div>
+                            <div class="form-group col-md">
+                                {{ form.password1.label }}
+                                {{ form.password1 }}
+                                <small id="helpId" class="text-muted">{{form.password1.help_text}}</small>
+                            </div>
+                            <div class="form-group col-md">
+                                {{ form.password2.label }}
+                                {{ form.password2 }}
+                                <small id="helpId" class="text-muted">{{form.password2.help_text}}</small>
+                            </div>
                         </div>
                         <div class="text-center">
-                            <button type="submit" class="btn btn-warning px-4">Registrar</button>
+                            <button type="submit" 
+                            class="btn btn-outline-light rounded-pill px-4">Registrar</button>
                         </div>
                     </form>
 
@@ -57,12 +61,8 @@
             </div>
         </div>
         
-        {% if not form.errors %}
-            <div class="col"></div>
-        {% endif %}
     </div>
 </div>
-
 
 {% endblock %}
 
