--- a/masterpc/templates/base/navbar.html
+++ b/masterpc/templates/base/navbar.html
@@ -18,7 +18,7 @@
         {% else %}
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">{{ username }}</a>
+                    <a href="#" class="nav-link">{{ request.user.username }}</a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'logout' %}" class="nav-link">Log Out</a>
