--- a/masterpc/templates/base/navbar.html
+++ b/masterpc/templates/base/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-light bg-light-1">
+<nav class="navbar navbar-expand navbar-light bg-warning">
     <div class="container">
         <a href="{% url 'index' %}" class="navbar-brand lobster">MasterPC</a>
         <ul class="navbar-nav mr-auto">
