--- a/masterpc/templates/user/index.html
+++ b/masterpc/templates/user/index.html
@@ -29,7 +29,7 @@
           {% for pc in pcs %}
           <div class="card bg-warning my-3 shadow">
             <div class="card-body py-2">
-              <h5><a href="{% url 'update_pc' pc.id %}" class="text-dark">{{pc.name}}</a>
+              <h5><a href="{% url 'detail_pc' pc.id %}" class="text-dark">{{pc.name}}</a>
                 <button class="btn btn-warning btn-sm rounded-circle float-right" type="button" data-toggle="collapse"
                   data-target="#collapse_{{pc.id}}" aria-expanded="false" aria-controls="collapse_{{pc.id}}">
                   <i class="fas fa-angle-down fa-lg"></i>
@@ -37,13 +37,13 @@
               </h5>
               <div class="collapse" id="collapse_{{pc.id}}">
                 <p class="text-truncate mb-0 small">
-                  CPU: Amd Ryzen 5 3600 <br>
-                  GPU: Gigabyte RX 5500 XT 8G OC <br>
-                  Board: Gigabyte Aorus B450M <br>
-                  RAM: Corsair Vengeance RGB Pro 8GB 3000Mhz (x2) <br>
-                  Disk: Crusial 512GB (Ssd M.2) <br>
-                  Seagate Barracuda 2TB (HHD) <br>
-                  PSU: Thermaltake 600W Bronce <br>
+                  CPU: {{pc.cpu.first.cpu}} <br>
+                  GPU: {{pc.gpu.first.gpu}} <br>
+                  Board: {{pc.board.first.board}}<br>
+                  RAM: {{pc.ram.first.ram}} <br>
+                  Disk:  <br>
+                  PSU: {{pc.psu.first.psu}} <br>
+                  Case: {{pc.case.first.case}} <br>
                 </p>
                 <div class="text-right">
                   <a href="{% url 'update_pc' pc.id %}" class="btn btn-outline-dark rounded-pill btn-sm px-3">
