--- a/masterpc/templates/user/pc_details.html
+++ b/masterpc/templates/user/pc_details.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load sum %}
+{% load cost %}
 
 {% block title %}PC Details{% endblock %}
 
@@ -9,8 +10,13 @@
     <div class="col-sm-12 col-lg-10">
       <h3 class="text-warning">{{ pc.name }}</h3>
       <div class="text-light">
-        Budget: {% if pc.budget %} $ {{pc.budget}} {% else  %} 
-        <span class="text-muted">Undefined</span> {% endif %}
+        <span>
+          Budget: {% if pc.budget %} $ {{pc.budget}} {% else  %}
+          <span class="text-muted">Undefined</span> {% endif %}
+        </span>
+        <div class="float-right">
+          <h4 class="text-warning"> Cost: $ {{ pc|cost }}</h4>
+        </div>
       </div>
       <!-- <hr class="bg-secondary"> -->
       <h4 class="text-center text-light my-4">
