--- a/masterpc/templates/user/index.html
+++ b/masterpc/templates/user/index.html
@@ -70,7 +70,7 @@
               <span class="m-2">Presupuesto:
                 <span> {% if pc.budget %}  $ {{pc.budget}}  {% else  %} - {% endif %} </span>
               </span>
-              <span class="m-2 font-weight-bold ">Costo: $ {{ pc|cost }}</span>
+              <span class="m-2 font-weight-bold text-nowrap">Costo: $ {{ pc|cost }}</span>
             </div>
           </div>
           
