--- a/masterpc/templates/registration/login.html
+++ b/masterpc/templates/registration/login.html
@@ -17,7 +17,7 @@
                         <div class="form-group">
                             <label for="username">{{ form.username.label }}</label>
                             <input type="text" name="username" class="form-control"
-                                placeholder="{{ form.username.label }}">
+                                placeholder="{{ form.username.label }}" autocapitalize="none">
                         </div>
                         <div class="form-group">
                             <label for="password">{{ form.password.label }}</label>
