Select con barra de busqueda

--- a/masterpc/templates/base/base.html
+++ b/masterpc/templates/base/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}Home{% endblock %} • MasterPC</title>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="{% static 'js/fontawesome.js' %}"></script>
 </head>
@@ -28,6 +29,7 @@
     <script src="{% static 'js/jquery-3.5.1.slim.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
     {% block script %}{% endblock %}
 </body>
 </html>
