--- a/masterpc/templates/user/pc_add_component.html
+++ b/masterpc/templates/user/pc_add_component.html
@@ -6,7 +6,7 @@
 <div class="container py-4">
    <h3 class="text-light">Select {{ name_component }}</h3>
    <div class="form-group">
-      <select class="form-control" name="comp" id="comp">
+      <select class="form-control selectpicker" name="comp" id="comp" data-live-search="true">
          <option value="0" disabled>Select {{ name_component}}</option>
          {% for object in objects %}
          <option value="{{object.id}}">{{object}}</option>
