--- a/masterpc/templates/user/index.html
+++ b/masterpc/templates/user/index.html
@@ -17,6 +17,7 @@
     </div>
 
   {% else %}
+    <div class="row">
       <div class="col-sm-12 col-lg-6">
       
         <h4 class="text-light my-4"> Mis PCs
@@ -80,6 +81,38 @@
           <div class="text-center text-light">Don't create a PC yet</div>
         {% endif %}
       </div>
+      <div class="col-sm-12 offset-lg-1 col-lg-5">
+        <div class="my-3">
+          <h5 class="text-center text-warning">Compare PCs</h5>
+          <form action="{% url 'compare_pc' %}" method="GET">
+            <div class="form-group">
+              <select name="pc1" id="pc1" class="form-control" required>
+                <option value="" selected disabled>Select the first PC</option>
+                {% for pc in pcs %}
+                  <option value="{{pc.id}}">{{pc.name}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="form-group">
+              <select name="pc2" id="pc2" class="form-control" required>
+                <option value="" selected disabled>Select the second PC</option>
+                {% for pc in pcs %}
+                  <option value="{{pc.id}}">{{pc.name}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-warning rounded-pill px-3">
+                <i class="fas fa-fist-raised fa-rotate-90"></i> 
+                Compare 
+                <i class="fas fa-fist-raised fa-rotate-270"></i>
+              </button>
+            </div>
+          </form>
+          
+        </div>
+      </div>
+    </div>
         
   {% endif %}
 </div>
