--- a/masterpc/templates/user/pc_add_component.html
+++ b/masterpc/templates/user/pc_add_component.html
@@ -3,7 +3,12 @@
 {% block title %}PC Details{% endblock %}
 
 {% block container %}
-<div class="container py-4">
+<div class="container py-3">
+   <div class="mb-2">
+      <a href="{% url 'detail_pc' pc_id %}" class="text-warning">
+         <i class="fas fa-arrow-left"></i> Back to PC
+      </a>
+   </div>
    <h3 class="text-light">Select {{ name_component }}</h3>
    <div class="form-group">
       <select class="form-control selectpicker" name="comp" id="comp" data-live-search="true">
